[tool.poetry]
name = "dw"
version = "0.1.0"
description = ""
authors = ["Michel Clemer Monteiro Deolino <michelclemermonteirodeolino@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
